# road_segmentation_plugin

./: CMakeLists.txt  package.xml  plugins.xml
include/road_segmentation_plugin/: nn_wrapper_road_segmentation.hpp  road_segmentation.hpp  road_segmentation_plugin.hpp
models/: ENet_triple_schoolyard_4_shaves.blob  ENet_triple_schoolyard_6_shaves.blob  ENet_triple_schoolyard_8_shaves.blob  enet.json
src/: nn_wrapper_road_segmentation.cpp  road_segmentation.cpp  road_segmentation_plugin.cpp
